--- a/TalentoHumano/templates/TalentoHumano/PermisosLaborales/index.html
+++ b/TalentoHumano/templates/TalentoHumano/PermisosLaborales/index.html
@@ -25,8 +25,10 @@
                 <div id="panel-1" class="panel">
                     <div class="panel-hdr">
                         <h2 class="small">
-                            <span class="fad fa-2x fa-plus-circle cursor-pointer" onclick="" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear Permiso Laboral">
-                            </span>
+                            {% if perms.TalentoHumano.add_permisolaboral %}
+                                <span class="fad fa-2x fa-plus-circle cursor-pointer" onclick="abrirModalCrear('{% url 'TalentoHumano:permiso-laboral-crear' %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear Permiso Laboral">
+                                </span>
+                            {% endif %}
                         </h2>
                         <div class="panel-toolbar">
                             <div class="d-flex position-relative ml-auto mr-2" style="min-width: 10rem;">
@@ -113,18 +115,18 @@
                                                         {% endif %}
                                                     </td>
                                                     <td class="text-center">
-                                                        {% if permiso.estado_rrhh == None %}
+                                                        {% if perms.TalentoHumano.add_permisolaboral and permiso.estado_rrhh == None %}
                                                             <a class="fad fa-2x fa-file-upload" href="" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar Soporte"></a>
                                                         {% endif %}
-                                                        {% if permiso.soporte %}
+                                                        {% if perms.TalentoHumano.view_permisolaboral and permiso.soporte %}
                                                             <a class="fad fa-2x fa-eye" href="" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Ver Soporte"></a>
                                                         {% endif %}
                                                     </td>
                                                     <td class="text-center">
-                                                        {% if permiso.estado_rrhh == None %}
+                                                        {% if perms.TalentoHumano.change_permisolaboral and permiso.estado_rrhh == None %}
                                                           <a class="fad fa-2x fa-file-edit" id="editar_{{ consecutivo.id }}" href="" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
                                                         {% endif %}
-                                                        {% if permiso.estado_rrhh == None %}
+                                                        {% if perms.TalentoHumano.delete_permisolaboral and permiso.estado_rrhh == None %}
                                                           <a class="fad fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ permiso.id }}" href="javascript:void(0);" onclick="fConfirmarEliminar({{ permiso.id }}, true)" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Anular"></a>
                                                         {% endif %}
                                                     </td>
