EVA-242 feat: Se crea el index para los reportes de eficiencia de los grupos de actividades. Se crea en el menu del grupo la opción para dirigirse al index de los reportes.
-En el index se crea la grafica para comparar los tiempo estimado de finalización de las actividades del grupo con los tiempo reales.

-Se crean las tablas para los promedios de tiempo estimado, tiempo invertido y porcentaje de eficiencia de las actividades en proceso y cerradas.

--- a/GestionActividades/templates/GestionActividades/_common/_tarjeta_grupo_actividad.html
+++ b/GestionActividades/templates/GestionActividades/_common/_tarjeta_grupo_actividad.html
@@ -19,6 +19,9 @@
                             {% if perms.GestionActividades.delete_grupoactividad %}
                                 <a class="dropdown-item" href="javascript:void(0);" id="eliminar_{{ id_grupo }}"   onclick="fConfirmarEliminar({{ id_grupo }}, 1)">Eliminar</a>
                             {% endif %}
+                            {% if perms.GestionActividades.view_grupoactividad %}
+                                <a class="dropdown-item" href="{% url 'GestionActividades:reporte-eficiencia-grupo' id_grupo%}">Reporte Eficiencia</a>
+                            {% endif %}
                         </div>
                     {% endif %}
                 </div>
