--- a/TalentoHumano/templates/TalentoHumano/PermisosLaborales/index.html
+++ b/TalentoHumano/templates/TalentoHumano/PermisosLaborales/index.html
@@ -115,11 +115,8 @@
                                                         {% endif %}
                                                     </td>
                                                     <td class="text-center">
-                                                        {% if perms.TalentoHumano.add_permisolaboral and permiso.estado_rrhh == None %}
-                                                            <a class="fad fa-2x fa-file-upload" href="" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar Soporte"></a>
-                                                        {% endif %}
                                                         {% if perms.TalentoHumano.view_permisolaboral and permiso.soporte %}
-                                                            <a class="fad fa-2x fa-eye" href="" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Ver Soporte"></a>
+                                                            <a class="fad fa-2x fa-eye" href="javascript:abrirModalVistaPrevia('{% url 'TalentoHumano:permiso-laboral-ver' permiso.id%}')" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Ver Soporte"></a>
                                                         {% endif %}
                                                     </td>
                                                     <td class="text-center">
@@ -146,8 +143,7 @@
     </div>
     {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='talento-humano/permiso-laboral' %}
     {% include 'EVA/_common/_vista_previa_modal.html' with titulo_modal='Vista Documento' %}
-    <div class="modal fade" tabindex="-1" id="crear" role="dialog"  aria-hidden="true"></div>
-    <div class="modal fade" tabindex="-1" id="cargar" role="dialog"></div>
+    <div class="modal fade" tabindex="-1" id="crear-permiso" role="dialog"  aria-hidden="true"></div>
 {% endblock %}
 
 {% block scripts %}
